--- a/QuizEngineCore/QuizEngineCore.xcodeproj/xcshareddata/xcschemes/QuizEngineiOSTests.xcscheme
+++ b/QuizEngineCore/QuizEngineCore.xcodeproj/xcshareddata/xcschemes/QuizEngineiOSTests.xcscheme
@@ -11,22 +11,17 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <TestPlans>
-         <TestPlanReference
-            reference = "container:../../QuizEngineCoreTests.xctestplan"
-            default = "YES">
-         </TestPlanReference>
-      </TestPlans>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
       <Testables>
          <TestableReference
             skipped = "NO"
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C9413BEA2EB10393002F03B9"
-               BuildableName = "QuizEngineCoreTests.xctest"
-               BlueprintName = "QuizEngineCoreTests"
+               BlueprintIdentifier = "C9413C8A2EB13251002F03B9"
+               BuildableName = "QuizEngineiOSTests.xctest"
+               BlueprintName = "QuizEngineiOSTests"
                ReferencedContainer = "container:QuizEngineCore.xcodeproj">
             </BuildableReference>
          </TestableReference>
