--- a/QuizEngine.xcworkspace/xcshareddata/xcschemes/QuizEngineiOSTests.xcscheme
+++ b/QuizEngine.xcworkspace/xcshareddata/xcschemes/QuizEngineiOSTests.xcscheme
@@ -6,22 +6,6 @@
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES"
       buildArchitectures = "Automatic">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C9413BDF2EB10393002F03B9"
-               BuildableName = "QuizEngineCore.framework"
-               BlueprintName = "QuizEngineCore"
-               ReferencedContainer = "container:QuizEngineCore.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -29,6 +13,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "C9413C8A2EB13251002F03B9"
+               BuildableName = "QuizEngineiOSTests.xctest"
+               BlueprintName = "QuizEngineiOSTests"
+               ReferencedContainer = "container:QuizEngineCore/QuizEngineCore.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -47,15 +44,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "C9413BDF2EB10393002F03B9"
-            BuildableName = "QuizEngineCore.framework"
-            BlueprintName = "QuizEngineCore"
-            ReferencedContainer = "container:QuizEngineCore.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
