--- a/QuizEngine.xcworkspace/xcshareddata/xcschemes/QuizEngineCore.xcscheme
+++ b/QuizEngine.xcworkspace/xcshareddata/xcschemes/QuizEngineCore.xcscheme
@@ -6,6 +6,22 @@
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES"
       buildArchitectures = "Automatic">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "C9413BDF2EB10393002F03B9"
+               BuildableName = "QuizEngineCore.framework"
+               BlueprintName = "QuizEngineCore"
+               ReferencedContainer = "container:QuizEngineCore/QuizEngineCore.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -13,19 +29,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C9413C8A2EB13251002F03B9"
-               BuildableName = "QuizEngineiOSTests.xctest"
-               BlueprintName = "QuizEngineiOSTests"
-               ReferencedContainer = "container:QuizEngineCore.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -44,6 +47,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C9413BDF2EB10393002F03B9"
+            BuildableName = "QuizEngineCore.framework"
+            BlueprintName = "QuizEngineCore"
+            ReferencedContainer = "container:QuizEngineCore/QuizEngineCore.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
