--- a/QuizEngine.xcworkspace/xcshareddata/xcschemes/QuiziOSApp.xcscheme
+++ b/QuizEngine.xcworkspace/xcshareddata/xcschemes/QuiziOSApp.xcscheme
@@ -15,10 +15,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C9413C822EB13251002F03B9"
-               BuildableName = "QuizEngineiOS.framework"
-               BlueprintName = "QuizEngineiOS"
-               ReferencedContainer = "container:QuizEngineCore.xcodeproj">
+               BlueprintIdentifier = "C9413E212EB218C0002F03B9"
+               BuildableName = "QuiziOSApp.app"
+               BlueprintName = "QuiziOSApp"
+               ReferencedContainer = "container:QuiziOSApp/QuiziOSApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -27,23 +27,29 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <TestPlans>
-         <TestPlanReference
-            reference = "container:../QuizEngineiOS.xctestplan"
-            default = "YES">
-         </TestPlanReference>
-      </TestPlans>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
       <Testables>
          <TestableReference
             skipped = "NO"
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C9413C8A2EB13251002F03B9"
-               BuildableName = "QuizEngineiOSTests.xctest"
-               BlueprintName = "QuizEngineiOSTests"
-               ReferencedContainer = "container:QuizEngineCore.xcodeproj">
+               BlueprintIdentifier = "C9413E2E2EB218C1002F03B9"
+               BuildableName = "QuiziOSAppTests.xctest"
+               BlueprintName = "QuiziOSAppTests"
+               ReferencedContainer = "container:QuiziOSApp/QuiziOSApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "C9413E382EB218C1002F03B9"
+               BuildableName = "QuiziOSAppUITests.xctest"
+               BlueprintName = "QuiziOSAppUITests"
+               ReferencedContainer = "container:QuiziOSApp/QuiziOSApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -58,6 +64,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C9413E212EB218C0002F03B9"
+            BuildableName = "QuiziOSApp.app"
+            BlueprintName = "QuiziOSApp"
+            ReferencedContainer = "container:QuiziOSApp/QuiziOSApp.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -65,15 +81,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "C9413C822EB13251002F03B9"
-            BuildableName = "QuizEngineiOS.framework"
-            BlueprintName = "QuizEngineiOS"
-            ReferencedContainer = "container:QuizEngineCore.xcodeproj">
+            BlueprintIdentifier = "C9413E212EB218C0002F03B9"
+            BuildableName = "QuiziOSApp.app"
+            BlueprintName = "QuiziOSApp"
+            ReferencedContainer = "container:QuiziOSApp/QuiziOSApp.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
